# recalbox-emulationstation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  libpistache.so.0  libpistache.so.0.2.0.20230707  recalbox_help.txt  upload.sh
data/: ResourceUtil.cpp  Resources.h
data/converted/: Arcade_png.cpp  Recalbox_icons_ttf.cpp  arcade_icon_svg.cpp  crt__logojamma_svg.cpp  f8bitfortressplus_ttf.cpp  help__piboy_xrs_menu_png.cpp  pad_info_fr_svg.cpp  recalbox_qrcode_svg.cpp  recalbox_x_kubii_svg.cpp  win_network_share_png.cpp  wizard__didyouknow_png.cpp
es-app/: CMakeLists.txt
es-app/src/: ApplicationWindow.cpp  ApplicationWindow.h  CommandThread.cpp  CommandThread.h  DemoMode.cpp  GameNameMap.cpp  GameNameMapManager.cpp  GameNameMapManager.h  LibretroRatio.cpp  LibretroRatio.h  MainRunner.cpp  MainRunner.h  Upgrade.cpp  Upgrade.h  main.cpp
es-app/src/bios/: Bios.cpp  Bios.h  BiosList.cpp  BiosList.h  BiosManager.cpp  BiosManager.h
es-app/src/btautopair/: BTAutopairManager.cpp  BTAutopairManager.h
es-app/src/components/: ITextListComponentOverlay.h  RatingComponent.cpp  RatingComponent.h  ScraperSearchComponent.cpp  TextListComponent.h
es-app/src/emulators/: EmulatorData.h  EmulatorDescriptor.h  EmulatorList.h  EmulatorManager.cpp  EmulatorManager.h
es-app/src/games/: FileData.cpp  FileData.h  FileSorts.cpp  FileSorts.h  FolderData.cpp  FolderData.h  GameFilesUtils.cpp  GameFilesUtils.h  GameRandomSelector.cpp  IFilter.h  MetadataDescriptor.cpp  MetadataDescriptor.h  MetadataFieldDescriptor.h  MetadataStringHolder.cpp  MetadataStringHolder.h  MetadataType.h  RootFolderData.h  SaveState.cpp  SaveState.h
es-app/src/guis/: GuiBiosMd5.cpp  GuiBiosScan.cpp  GuiBiosScan.h  GuiControlHints.cpp  GuiDownloadFile.cpp  GuiDownloadFile.h  GuiDownloader.cpp  GuiDownloader.h  GuiHashStart.cpp  GuiHashStart.h  GuiMetaDataEd.cpp  GuiMetaDataEd.h  GuiNetPlay.cpp  GuiNetPlay.h  GuiNetPlayClientPasswords.cpp  GuiNetPlayEditPasswords.cpp  GuiNetPlayEditPasswords.h  GuiNetPlayHostPasswords.cpp  GuiSaveStates.cpp  GuiSaveStates.h  GuiScrapeLocal.cpp  GuiScrapeLocal.h  GuiScraperRun.cpp  GuiScraperRun.h  GuiScraperSingleGameRun.cpp  GuiScraperSingleGameRun.h  GuiSearch.cpp  GuiSearch.h  GuiSettings.cpp  GuiSettings.h  GuiUpdateRecalbox.cpp  GuiUpdateRecalbox.h  GuiWaitLongExecution.h  IGuiDownloaderUpdater.h  MenuMessages.h
es-app/src/mqtt/: MqttClient.cpp  MqttClient.h
es-app/src/music/: RemotePlaylist.cpp  RemotePlaylist.h
es-app/src/netplay/: NetPlayThread.cpp  NetPlayThread.h
es-app/src/padtokeyboard/: PadToKeyboardManager.cpp
es-app/src/patreon/: IPatreonNotification.h  PatronInfo.cpp  PatronInfo.h
es-app/src/recalbox/: BootConf.cpp  BootConf.h  RecalboxStorageWatcher.cpp  RecalboxSystem.cpp  RecalboxSystem.h
es-app/src/scraping/: INotifyScrapeResult.h  ScraperFactory.cpp  ScraperFactory.h  ScraperSeamless.cpp  ScraperSeamless.h  ScraperSeamlessMessage.h  ScraperTools.cpp  ScraperTools.h
es-app/src/systems/: BaseSystemDownloader.h  DownloaderManager.cpp  DownloaderManager.h  ISlowSystemOperation.h  ISystemChangeNotifier.h  ISystemLoadingPhase.h  LightGunDatabase.cpp  LightGunDatabase.h  SystemData.cpp  SystemData.h  SystemDataBase.cpp  SystemDataBase.h  SystemDescriptor.cpp  SystemDescriptor.h  SystemDeserializer.cpp  SystemDeserializer.h  SystemHasher.cpp  SystemHasher.h  SystemManager.cpp  SystemManager.h  SystemSorting.cpp  SystemSorting.h  VirtualSystemDescriptor.h  VirtualSystemResult.cpp  VirtualSystemResult.h  VirtualSystemType.h
es-app/src/usernotifications/: NotificationManager.cpp  NotificationManager.h
es-app/src/views/: GameClipView.cpp  GameClipView.h  ISaveStateSlotNotifier.h  ISoftPatchingNotifier.h  MenuFilter.h  SplashView.cpp  SplashView.h  SystemView.cpp  SystemView.h  ViewController.cpp  ViewController.h
es-app/src/web/: Parameters.cpp  Parameters.h  RestApiServer.cpp  RestApiServer.h
es-core/src/: CrtConf.cpp  CrtConf.h  IRecalboxConfChanged.h  ImageIO.cpp  RecalboxConf.cpp  RecalboxConf.h  Renderer.cpp  Renderer.h  ResolutionAdapter.cpp  ResolutionAdapter.h  Resolutions.cpp  Resolutions.h  RotationManager.cpp  RotationManager.h  VideoEngine.h  WindowManager.cpp  WindowManager.h
es-core/src/audio/: AudioController.cpp  AudioController.h  AudioManager.cpp  AudioManager.h  AudioMode.cpp  AudioMode.h  DeviceDescriptor.h  IAudioController.h  IAudioNotification.h  Music.cpp  Music.h  NameFiltering.cpp  NameFiltering.h
es-core/src/bluetooth/: BluetoothListener.h  DeviceStatus.cpp
es-core/src/components/: BusyComponent.cpp  BusyComponent.h  ButtonComponent.cpp  ButtonComponent.h  ComponentGrid.cpp  ComponentGrid.h  ComponentList.h  DateTimeComponent.cpp  DateTimeComponent.h  EditableComponent.cpp  EditableComponent.h  GameClipContainer.cpp  GameClipContainer.h  HelpComponent.cpp  IEditableComponent.h  IList.h  ISwitchComponent.h  ImageComponent.cpp  ImageComponent.h  ImageGridComponent.h  MenuComponent.cpp  MenuComponent.h  NinePatchComponent.cpp  NinePatchComponent.h  OptionListComponent.h  PictureComponent.cpp  PictureComponent.h  ProgressBarComponent.cpp  ProgressBarComponent.h  ScrollableContainer.cpp  SliderComponent.cpp  SliderComponent.h  SwitchComponent.cpp  SwitchComponent.h  TextComponent.cpp  TextComponent.h  TextEditComponent.cpp  TextEditComponent.h  TextScrollComponent.cpp  TextScrollComponent.h  (+4 more)
es-core/src/guis/: Gui.h  GuiArcadeVirtualKeyboard.cpp  GuiArcadeVirtualKeyboard.h  GuiDetectDevice.cpp  GuiInfoPopup.cpp  GuiInfoPopup.h  GuiInfoPopupBase.h  GuiInfoPopupScraper.cpp  GuiInfoPopupScraper.h  GuiInputConfig.cpp  GuiInputConfig.h  GuiMsgBox.cpp  GuiMsgBox.h  GuiMsgBoxScroll.cpp  (+9 more)
locale/: emulationstation2.pot
tests/: CMakeLists.txt
tests/tests/: test_http.cpp  test_path.cpp  test_string_ascii_case.cpp  test_string_splitandjoin.cpp  test_string_trimming.cpp
tool-md5zip/: main.cpp
web-server/: CMakeLists.txt  Parameters.cpp  Parameters.h  main.cpp
web-server/server/: IRouter.h  Server.cpp
web-server/server/handlers/: RequestHandler.cpp  RequestHandler.h  RequestHandlerTools.cpp  RequestHandlerTools.h
(+405 files in other folders)
